Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19706

Pull Down Menu placement is broken when Parent is part way off the screen on the right

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Win32SS
    • None

    Description

      To reproduce, move a window with a menu, like notepad, so the menu item is nearly off the right of the screen. Then,  click it. The menu won't align with the screen right edge.

      Example:

      W2K3SP2 works fine:

      After Fix:

      This happens on the latest version of ReactOS which is 0.4.15-dev-8486-g90de2b6.
      Absolutely nothing shows up in the debug log when this happens.
      A possible fix is attached here: menu-fix-03.patch
      Originally reported by I_Kill_Bugs in CORE-16729.

      Attachments

        1. Menu_Right.JPG
          Menu_Right.JPG
          52 kB
        2. menu-fix-03.patch
          0.7 kB
        3. menu-right-0.4.14-rel-bad.png
          menu-right-0.4.14-rel-bad.png
          118 kB
        4. Menu-right-01.png
          Menu-right-01.png
          31 kB
        5. Popup_Menu.bmp
          Popup_Menu.bmp
          1.83 MB
        6. w2k3sp2-menu-right-01.png
          w2k3sp2-menu-right-01.png
          120 kB

        Issue Links

          Activity

            People

              DougLyons DougLyons
              DougLyons DougLyons
              Votes:
              1 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: