[NTUSER] Fix popup menu placement when part way off right edge of screen

CORE-19706